attempt to fix issues with cart page component on mobile not registering input presses

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -78,3 +78,7 @@ footer {
   position: absolute;
   z-index: -1;  
 }
+
+.subtotal_and_checkout_div_in_cart{
+  z-index: 9999;
+}
